# run-parts-rust

./: Cargo.toml  README.md
.github/workflows/: check-test-lint.yml
src/: exec.rs  filter.rs  lib.rs  main.rs
