[package]
name = "run-parts"
version = "0.1.0"
authors = ["Illya Kysil <ikysil@ikysil.name>"]
edition = "2018"
description = "Run scripts or programs in a directory"
license = "Apache-2.0"
categories = ["command-line-utilities"]
repository = "https://github.com/ikysil/run-parts-rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
exitcode = "1.1.2"
failure = "0.1.8"
regex = "1.3.9"
lazy_static = "1.4.0"
is_executable = "0.1.2"
io-mux = "1.0.1"
